--- a/it161/fp/cal.html
+++ b/it161/fp/cal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-     <title>N K K - for SALE - </title>
+     <title>N K K - Cal Ripkin - </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="../css/main-tmp.css">
@@ -50,7 +50,7 @@
         <tr>
             <td><div class="flexible-HERO img"> 
               <a class="two" href="https://www.ebay.com/usr/njd_2112" target="_blank">
-                <img alt="to item" src="../images/coins_01.png">
+                <img alt="to item" src="../images/Cal.jpg">
                 </a>
               </div></td>
               <td>
@@ -71,9 +71,7 @@
 
 
 
-  <div class="margin-auto">
-      <div>This text is in a div positioned by margin:auto</div>
-  </div>
+
 
     <footer>
       <p><small>&copy;<span id="this-year"></span> by 
