--- a/it161/fp/sell-template.html
+++ b/it161/fp/sell-template.html
@@ -18,10 +18,11 @@
 <div class="dropdown">
   <button id="myBtn" class="dropbtn">&#9776; <span class="flexible-LNK-BGR"> <img  src="../images/NKK-LOGO_sml.png"> </span></button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="template.html">Home</a>
-    <a href="#">Cards</a>
-    <a href="#">Coins</a>
-    <a href="sell-template.html">Sell</a>
+        <a href="template.html">Home</a>
+        <a href="HOT.html">HOT</a>
+        <a href="cards-all.html">Cards</a>
+        <a href="coins-all.html">Coins</a>
+        <a href="sell-template.html">Sell</a>
   </div>
 </div>
 
